--- a/_config.yml
+++ b/_config.yml
@@ -79,7 +79,7 @@ meta_generator: true
 ## You can customize the date format as defined in
 ## http://momentjs.com/docs/#/displaying/format/
 #date_format: YYYY-MM-DD
-date: "{{ 'now' | date: '%Y-%m-%d %H:%M:%S' }}"
+date: 2022-07-01T09:00:00+08:00
 #time_format: HH:mm:ss
 ## updated_option supports 'mtime', 'date', 'empty'
 updated_option: 'mtime'
