--- a/_config.yml
+++ b/_config.yml
@@ -79,7 +79,9 @@ meta_generator: true
 ## You can customize the date format as defined in
 ## http://momentjs.com/docs/#/displaying/format/
 #date_format: YYYY-MM-DD
-date: 2022-07-01T09:00:00+08:00
+#date: 2022-07-01T09:00:00+08:00
+date_format: YYYY-MM-DD
+time_format: HH:mm:ss
 #time_format: HH:mm:ss
 ## updated_option supports 'mtime', 'date', 'empty'
 updated_option: 'mtime'
