--- a/_config.yml
+++ b/_config.yml
@@ -106,6 +106,6 @@ theme: landscape
 ## Docs: https://hexo.io/docs/one-command-deployment
 deploy:
   type: git
-  repo: https://github.com/Grandli/grandli.github.io
+  repo: https://github.com/Grandli/grandli.github.io.git
   # example, https://github.com/hexojs/hexojs.github.io
   branch: master
